BUGFIX: Variable "d" now works like FilterFactory/FilterFoundy1.6 again. (Bug introduced in FilterFoundry 1.7 due to the change of the c2d() function) NOTE: FilterFactory uses c2d(x,y):=atan2(y,x), but d:=atan2(-y,-x) Due to compatibility reasons, we implement it the same way!
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@201 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ win_flex_bison/README.txt
 win_flex_bison/UNISTD_ERROR.readme
 win_flex_bison/win_bison.exe
 win_flex_bison/win_flex.exe
+win_flex_bison/changelog.md
 
 wpj/*.err
 wpj/*.mk
