--- a/PiPL.rc
+++ b/PiPL.rc
@@ -26,10 +26,13 @@
 
 #define LC(a,b,c,d)		#d, #c, #b, #a
 
+/* 8BIM = Adobe Photoshop */
 #define VENDORID LC(8,B,I,M)
+
 #define NULLID 0L
 
-/* Note: make_win.c writes language 0. So, this should be language 0, too, otherwise the standalone filter would have 2 languages for this resource. */
+/* Note: make_win.c writes language 0. So, this should be language 0, too,
+   otherwise the standalone filter would have 2 languages for this resource. */
 LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 16000  PiPL  DISCARDABLE
 BEGIN
@@ -41,13 +44,16 @@ BEGIN
 	VENDORID, LC(n,a,m,e), NULLID, 20L, "\021Filter Foundry...\0\0", /* PString */
 
 	/* HasTerminology { plugInClassID, plugInEventID, AETE_ID, vendorName " " plugInName }, */
-	VENDORID, LC(h,s,t,m), NULLID, 44L, /* = 3*4 + 2 + sizeof(c string) + padding */
+	VENDORID, LC(h,s,t,m), NULLID, 16L, /* = 3*4 + 2 + sizeof(c string) + padding */
 	0L,								/* version */
 	LC(F,l,t,r),					/* Class ID, always required.  Must be eventFilter='Fltr' to show up in "Actions" tab. */
 	LC(f,i,F,o),					/* Event ID, or typeNULL if not Filter/Color Picker/Selection. */
 	AETE_ID,						/* Dictionary ('AETE') resource ID. (only 2 bytes long!) */
-	"Telegraphics FilterFoundry\0\0\0\0" /* Unique scope string, C format, long padded.
-											If set, the plugin will only communicate with the host (Photoshop), not with AppleScript. */
+
+	/*"Telegraphics FilterFoundry\0\0\0\0"*/
+	/* Unique scope string, C format, long padded. If set, the plugin will only communicate with the host (Photoshop), not with AppleScript. */
+	/* Since 1.7b2, we accept AppleScript, since the AETE keys are now randomly chosen for each standalone plugin. */
+	"\0\0"
 
 
 #include "PiPL_body.rc"
