--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -18,9 +18,11 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
+// This RC file is for Windows only.
 // The PiPL_body contains the properties which are added to PIPL and RCDATA.
 // PIPL will additionally receive name, catg and hstm
-// Attention: This file may only contain 5 properties. If this number changes, please also change PiPL.rc
+// Attention: This file may only contain 5 properties. If this number changes,
+//            please also change PiPL.rc
 
 VENDORID, LC(k,i,n,d), NULLID, 4L, LC(8,B,F,M),	/* Filter module */
 VENDORID, LC(v,e,r,s), NULLID, 4L, latestFilterSubVersion,latestFilterVersion, /* Version Number */
@@ -33,6 +35,7 @@ VENDORID, LC(v,e,r,s), NULLID, 4L, latestFilterSubVersion,latestFilterVersion, /
 
 VENDORID, LC(m,o,d,e), NULLID, 4L, /* first 2 bytes:  */ flagSupportsGrayScale|flagSupportsIndexedColor|flagSupportsRGBColor|flagSupportsCMYKColor|flagSupportsHSLColor|flagSupportsHSBColor|flagSupportsMultichannel,
                                    /* second 2 bytes: */ flagSupportsDuotone|flagSupportsLABColor,
+
 /* FilterCaseInfo - in all cases:
 	   inStraightData,
 	   outStraightData,
@@ -41,6 +44,80 @@ VENDORID, LC(m,o,d,e), NULLID, 4L, /* first 2 bytes:  */ flagSupportsGrayScale|f
 	   worksWithBlankData,
 	   doNotCopySourceToDestination */
 VENDORID, LC(f,i,c,i), NULLID, 28L,
-	"\001\001\003\000","\001\001\003\000","\001\001\003\000","\001\001\003\000",
-	"\001\001\003\000","\001\001\003\000","\001\001\003\000",
 
+	/* Filter Case 1: filterCaseFlatImageNoSelection [A background layer or a flat image] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 2: filterCaseFlatImageWithSelection [No transparency data, but a selection may be present] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 3: filterCaseFloatingSelection [Image data with an accompanying mask] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 4: filterCaseEditableTransparencyNoSelection [Layer with transparency editing enabled and no selection] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 5: filterCaseEditableTransparencyWithSelection [Layer with transparency editing enabled and a selection] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 6: filterCaseProtectedTransparencyNoSelection [Layer with transparency editing disabled and no selection] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
+
+	/* Filter Case 7: filterCaseProtectedTransparencyWithSelection [Layer with transparency editing disabled and a selection] */
+	// inputHandling [Preprocessing actions on the image data] = 01h
+	// outputHandling [Postprocessing actions on the image data] = 01h
+	// flags1 [Flags for how the filter case information should be treated] = 03h
+	//       PIFilterDontCopyToDestinationBit  = true
+	//       PIFilterWorksWithBlankDataBit     = true
+	//       PIFilterFiltersLayerMaskBit       = false
+	//       PIFilterWritesOutsideSelectionBit = false
+	// flags2 [Reserved] = 00h
+	"\001\001\003\000",
