Fixed VisualStudio compiler-warnings (isatty undeclared, fileno undeclared, GetVersionEx deprecated)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@214 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -162,7 +162,7 @@ obj_w32/res.o : win_res.rc PiPL.rc PiPL_body.rc manifest.rc version_win.rc ui_wi
 	$(WINDRES) -o $@ -i $< --language=0 $(CPPFLAGS)
 
 lex.yy.c : lexer.l y.tab.h
-	$(LEX) $<
+	$(LEX) --never-interactive $<
 y.tab.c y.tab.h : parser.y
 	$(YACC) $< $(YFLAGS)
 
