--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -176,13 +176,13 @@ move lex.yy.c lex_yy.c</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <ResourceCompile>
-      <AdditionalIncludeDirectories>..\photoshop_sdk\pluginsdk\photoshopapi\pica_sp;..\photoshop_sdk\pluginsdk\photoshopapi\photoshop;..\telegraphics_common\adobeplugin;..\telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>photoshop_sdk\pluginsdk\photoshopapi\pica_sp;photoshop_sdk\pluginsdk\photoshopapi\photoshop;telegraphics_common\adobeplugin;telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN_ENV;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
 win_flex_bison\win_bison.exe parser.y -d -y
-win_flex_bison\win_flex.exe lexer.l y.tab.c
+win_flex_bison\win_flex.exe --never-interactive lexer.l y.tab.c
 move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -227,6 +227,30 @@ move lex.yy.c lex_yy.c</Command>
     <ClInclude Include="..\preview.h" />
     <ClInclude Include="..\scripting.h" />
     <ClInclude Include="..\symtab.h" />
+    <ClInclude Include="..\telegraphics_common\tt\ae.h" />
+    <ClInclude Include="..\telegraphics_common\tt\bufio.h" />
+    <ClInclude Include="..\telegraphics_common\tt\calc_std_state.h" />
+    <ClInclude Include="..\telegraphics_common\tt\carbonstuff.h" />
+    <ClInclude Include="..\telegraphics_common\tt\choosefile.h" />
+    <ClInclude Include="..\telegraphics_common\tt\compat_string.h" />
+    <ClInclude Include="..\telegraphics_common\tt\compat_win.h" />
+    <ClInclude Include="..\telegraphics_common\tt\curveto.h" />
+    <ClInclude Include="..\telegraphics_common\tt\dbg.h" />
+    <ClInclude Include="..\telegraphics_common\tt\dlg.h" />
+    <ClInclude Include="..\telegraphics_common\tt\dvi_driver.h" />
+    <ClInclude Include="..\telegraphics_common\tt\file_compat.h" />
+    <ClInclude Include="..\telegraphics_common\tt\file_io.h" />
+    <ClInclude Include="..\telegraphics_common\tt\menu.h" />
+    <ClInclude Include="..\telegraphics_common\tt\misc-mac.h" />
+    <ClInclude Include="..\telegraphics_common\tt\misc.h" />
+    <ClInclude Include="..\telegraphics_common\tt\my_timer.h" />
+    <ClInclude Include="..\telegraphics_common\tt\PAP.h" />
+    <ClInclude Include="..\telegraphics_common\tt\qd.h" />
+    <ClInclude Include="..\telegraphics_common\tt\scroll.h" />
+    <ClInclude Include="..\telegraphics_common\tt\sprintf_tiny.h" />
+    <ClInclude Include="..\telegraphics_common\tt\str.h" />
+    <ClInclude Include="..\telegraphics_common\tt\ui_compat.h" />
+    <ClInclude Include="..\telegraphics_common\tt\wind.h" />
     <ClInclude Include="..\ui.h" />
     <ClInclude Include="..\unistd.h" />
     <ClInclude Include="..\version.h" />
