Map labels are centered between two sliders, like in Filter Factory Converted more .txt files to .md files, for GitHub
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@221 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -126,6 +126,11 @@ BEGIN
 	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,		129,100, 25,12
 	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,		129,115, 25,12
 
+	LTEXT		"map(0)",FIRSTMAPLABELITEM,			129,18, 25,12
+	LTEXT		"map(1)",FIRSTMAPLABELITEM+1,		129,48, 25,12
+	LTEXT		"map(2)",FIRSTMAPLABELITEM+2,		129,78, 25,12
+	LTEXT		"map(3)",FIRSTMAPLABELITEM+3,		129,108, 25,12
+
 	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 100,10
 	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 100,10
 	CONTROL		"",FIRSTCTLITEM+2,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,40, 100,10
