--- a/version_win.rc
+++ b/version_win.rc
@@ -19,12 +19,11 @@
 */
 
 /* Version info resource
-   see http://msdn.microsoft.com/library/default.asp?url=/library/en-us/wcesdkr/html/_Tools_VERSIONINFO_Resource.asp
-   and http://msdn.microsoft.com/library/default.asp?url=/library/en-us/tools/tools/versioninfo_resource.asp */
+   see https://docs.microsoft.com/en-us/windows/win32/menurc/versioninfo-resource */
 
 #include "winver.h"
 
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION	VI_VERS_NUM
  PRODUCTVERSION	VI_VERS_NUM
@@ -36,25 +35,29 @@ VS_VERSION_INFO VERSIONINFO
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "080904B0"
+        BLOCK "040904B0"
         BEGIN
             VALUE "Comments",			VI_COMMENTS
-            VALUE "CompanyName",		"Telegraphics Pty Ltd, www.telegraphics.com.au\0"
+            VALUE "CompanyName",		VI_COMPANY_NAME
             VALUE "FileDescription",	"Filter Foundry plugin for Photoshop(R)\0"
             VALUE "FileVersion",		VERSION_STR "\0"
             /*VALUE "InternalName",		"FilterFoundry\0"*/
             VALUE "LegalCopyright",		"Copyright (C) 2003-2009 Toby Thain, 2018-" RELEASE_YEAR " Daniel Marschall\0"
             VALUE "License",			"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\0"
             /*VALUE "LegalTrademarks",	"\0"*/
+#ifdef _WIN64
+            VALUE "OriginalFilename",	"FilterFoundry64.8bf\0"
+#else
             VALUE "OriginalFilename",	"FilterFoundry.8bf\0"
+#endif
             /*VALUE "PrivateBuild",		"\0"*/
             VALUE "ProductName",		"Filter Foundry\0"
             VALUE "ProductVersion",		VERSION_STR "\0"
             /*VALUE "SpecialBuild",		"\0"*/
         END
     END
-    BLOCK "VarFileInfo" /* see http://msdn.microsoft.com/library/default.asp?url=/library/en-us/wcesdkr/html/_tools_VarFileInfo_Block.asp */
+    BLOCK "VarFileInfo" /* see https://docs.microsoft.com/en-us/windows/win32/menurc/varfileinfo-block */
     BEGIN                                   /* Attention: The translation code must be equal to the "StringFileInfo" block's translation! */
-        VALUE "Translation", 0x0809, 0x04B0	/* UK English, Unicode */
+        VALUE "Translation", 0x0409, 0x04B0	/* US English, Unicode */
     END
 END
