Fixed problem where 32bit Windows plugin tries to load 64bit standalone plugin
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@238 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ photoshop_sdk/license.html
 photoshop_sdk/ReadMe.html
 
 visual_studio/Win32/
-visual_studio/Win64/
+visual_studio/x64/
 visual_studio/.vs
 visual_studio/*.obj
 visual_studio/*.res
