--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -128,7 +128,7 @@
     <PreBuildEvent>
       <Command>cd ..
 win_flex_bison\win_bison.exe parser.y -d -y
-win_flex_bison\win_flex.exe lexer.l y.tab.c
+win_flex_bison\win_flex.exe --never-interactive lexer.l y.tab.c
 move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -153,7 +153,7 @@ move lex.yy.c lex_yy.c</Command>
     <PreBuildEvent>
       <Command>cd ..
 win_flex_bison\win_bison.exe parser.y -d -y
-win_flex_bison\win_flex.exe lexer.l y.tab.c
+win_flex_bison\win_flex.exe --never-interactive lexer.l y.tab.c
 move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -211,7 +211,7 @@ move lex.yy.c lex_yy.c</Command>
     <PreBuildEvent>
       <Command>cd ..
 win_flex_bison\win_bison.exe parser.y -d -y
-win_flex_bison\win_flex.exe lexer.l y.tab.c
+win_flex_bison\win_flex.exe --never-interactive lexer.l y.tab.c
 move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
