Divided Manifests for 64 and 32 Bit
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@240 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/manifest.rc
+++ b/manifest.rc
@@ -21,4 +21,9 @@
 #define RT_MANIFEST 24
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-1 RT_MANIFEST "manifest.xml"
+#ifdef _WIN64
+1 RT_MANIFEST "manifest64.xml"
+#else
+1 RT_MANIFEST "manifest32.xml"
+#endif
+
