--- a/ui_win.rc
+++ b/ui_win.rc
@@ -38,7 +38,7 @@ IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
 
 /* left,top,w,h */
 
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 ID_MAINDLG DIALOG DISCARDABLE  150,50, 308,277
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter Foundry"
@@ -100,7 +100,7 @@ BEGIN
 	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 END
 
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 ID_PARAMDLG DIALOG DISCARDABLE  150,50, 308,161
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter Foundry"
@@ -150,7 +150,7 @@ BEGIN
 	EDITTEXT	FIRSTCTLTEXTITEM+7,		269,115, 24,12,	ES_NUMBER|ES_RIGHT
 END
 
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 ID_BUILDDLG DIALOG DISCARDABLE  150,50, 208,243
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Make Standalone Filter"
