Internal change: PiPL/Manifest-template is now stored in 'TpTL' instead of 'DATA'/RCDATA. (But obfusc data stays at 'DATA'/RCDATA)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@243 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/PiPL.rc
+++ b/PiPL.rc
@@ -61,7 +61,7 @@ BEGIN
 END
 
 LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
-16000  RCDATA  DISCARDABLE
+16000  TPLT  DISCARDABLE
 BEGIN
 	0x0001, 		/* Reserved (for Photoshop) */
 	0L, 			/* kCurrentPiPLVersion */
