--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -19,7 +19,7 @@
 */
 
 // This RC file is for Windows only.
-// The PiPL_body contains the properties which are added to PIPL and RCDATA.
+// The PiPL_body contains the properties which are added to PIPL and TPLT (PIPL-Template).
 // PIPL will additionally receive name, catg and hstm
 // Attention: This file may only contain 5 properties. If this number changes,
 //            please also change PiPL.rc
