--- a/ui_win.rc
+++ b/ui_win.rc
@@ -193,8 +193,7 @@ BEGIN
 	CHECKBOX	"ctl(6)",FIRSTCTLCHECKITEM+6,	114,182, 35,12
 	CHECKBOX	"ctl(7)",FIRSTCTLCHECKITEM+7,	114,197, 35,12
 
-	CHECKBOX	"Protect",PROTECTITEM,	10,219, 35,12
-	CHECKBOX	"Obfuscate",OBFUSCITEM,	52,219, 50,12
+	CHECKBOX	"Protect and obfuscate",PROTECTITEM,	10,219, 90,12
 
 	LTEXT		"Category:",100,		10,10, 35,12
 	LTEXT		"Title:",101,			10,25, 35,12
