--- a/ui_win.rc
+++ b/ui_win.rc
@@ -39,16 +39,17 @@ IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
 /* left,top,w,h */
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-ID_MAINDLG DIALOG DISCARDABLE  150,50, 308,277
+ID_MAINDLG DIALOG DISCARDABLE  150,50, 312,277
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter Foundry"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"&OK",IDOK,			256,253, 42,14
-	PUSHBUTTON		"&Cancel",IDCANCEL,	206,253, 42,14
+	DEFPUSHBUTTON	"&OK",IDOK,			260,253, 42,14
+	PUSHBUTTON		"&Cancel",IDCANCEL,	210,253, 42,14
 	PUSHBUTTON	"Load...",OPENITEM,		10,253, 42,14
 	PUSHBUTTON	"Save...",SAVEITEM,		60,253, 42,14
 	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
+	PUSHBUTTON	"&Help",HELPITEM,		160, 253, 42, 14 
 
 	/* The class "Preview" is defined during run-time ui_win.c */
 	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
@@ -65,23 +66,23 @@ BEGIN
 	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,		129,100, 25,12
 	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,		129,115, 25,12
 
-	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 100,10
-	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 100,10
-	CONTROL		"",FIRSTCTLITEM+2,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,40, 100,10
-	CONTROL		"",FIRSTCTLITEM+3,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,55, 100,10
-	CONTROL		"",FIRSTCTLITEM+4,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,70, 100,10
-	CONTROL		"",FIRSTCTLITEM+5,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,85, 100,10
-	CONTROL		"",FIRSTCTLITEM+6,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,100, 100,10
-	CONTROL		"",FIRSTCTLITEM+7,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,115, 100,10
+	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 105,10
+	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 105,10
+	CONTROL		"",FIRSTCTLITEM+2,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,40, 105,10
+	CONTROL		"",FIRSTCTLITEM+3,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,55, 105,10
+	CONTROL		"",FIRSTCTLITEM+4,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,70, 105,10
+	CONTROL		"",FIRSTCTLITEM+5,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,85, 105,10
+	CONTROL		"",FIRSTCTLITEM+6,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,100, 105,10
+	CONTROL		"",FIRSTCTLITEM+7,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,115, 105,10
 
-	EDITTEXT	FIRSTCTLTEXTITEM,		269,10, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+1,		269,25, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+2,		269,40, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+3,		269,55, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+4,		269,70, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+5,		269,85, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+6,		269,100, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+7,		269,115, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM,		273,10, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+1,		273,25, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+2,		273,40, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+3,		273,55, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+4,		273,70, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+5,		273,85, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+6,		273,100, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT	FIRSTCTLTEXTITEM+7,		273,115, 24,12,	ES_NUMBER|ES_RIGHT
 
 	LTEXT		"R =",FIRSTLABELITEM,	15,135, 13,12
 	LTEXT		"G =",FIRSTLABELITEM+1,	15,163, 13,12
@@ -94,10 +95,12 @@ BEGIN
 	CONTROL		"CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 16,16
 	CONTROL		"CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 16,16
 
-	EDITTEXT	FIRSTEXPRITEM,			35,135, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM,			35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+
+	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
 END
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
