--- a/ui_win.rc
+++ b/ui_win.rc
@@ -44,12 +44,12 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Filter Foundry"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"&OK",IDOK,			260,253, 42,14
-	PUSHBUTTON		"&Cancel",IDCANCEL,	210,253, 42,14
+	DEFPUSHBUTTON	"OK",IDOK,			260,253, 42,14
+	PUSHBUTTON	"Cancel",IDCANCEL,	210,253, 42,14
 	PUSHBUTTON	"Load...",OPENITEM,		10,253, 42,14
 	PUSHBUTTON	"Save...",SAVEITEM,		60,253, 42,14
 	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
-	PUSHBUTTON	"&Help",HELPITEM,		160, 253, 42, 14 
+	PUSHBUTTON	"Help",HELPITEM,		160, 253, 42, 14 
 
 	/* The class "Preview" is defined during run-time ui_win.c */
 	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
@@ -99,8 +99,6 @@ BEGIN
 	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-
-	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
 END
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
@@ -109,8 +107,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Filter Foundry"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"&OK",IDOK,			256,137, 42,14
-	PUSHBUTTON		"&Cancel",IDCANCEL,	206,137, 42,14
+	DEFPUSHBUTTON	"OK",IDOK,			256,137, 42,14
+	PUSHBUTTON	"Cancel",IDCANCEL,	206,137, 42,14
 	LTEXT		"",PARAMAUTHORITEM,		10,137, 42,20
 	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
 
@@ -159,8 +157,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Make Standalone Filter"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"&OK",IDOK,			156,219, 42,14
-	PUSHBUTTON		"&Cancel",IDCANCEL,	106,219, 42,14
+	DEFPUSHBUTTON	"OK",IDOK,			156,219, 42,14
+	PUSHBUTTON	"Cancel",IDCANCEL,	106,219, 42,14
 
 /* for initial values of the following EDITTEXT fields, see ui_build.c */
 	EDITTEXT	CATEGORYITEM,			50,10, 148,12
