Fixed broken obfuscation
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@309 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,38 @@ photoshop_sdk/pluginsdk/
 photoshop_sdk/license.html
 photoshop_sdk/ReadMe.html
 
-visual_studio/Win32/
-visual_studio/x64/
+3264_mixer\.vs
+3264_mixer\*.tmp
+3264_mixer\*.tlog
+3264_mixer\*.obj
+3264_mixer\*.iobj
+3264_mixer\*.pdb
+3264_mixer\*.ipdb
+3264_mixer\*.log
+3264_mixer\*.lastbuilddate
+3264_mixer\*.FileListAbsolute.txt
+
+3264_mixer\in\*.8bf
+3264_mixer\out\*.8bf
+
 visual_studio/.vs
 visual_studio/*.obj
 visual_studio/*.res
 visual_studio/*.8bf
 visual_studio/*.exp
 visual_studio/*.lib
+visual_studio/*.tlog
+visual_studio/*.iobj
+visual_studio/*.pdb
+visual_studio/*.ipdb
+visual_studio/*.log
+visual_studio/*.lastbuilddate
+visual_studio/*.FileListAbsolute.txt
+visual_studio/*.recipe
+visual_studio/*.idb
+visual_studio/*.8bf.manifest
+visual_studio/*.intermediate.manifest
+
 
 win_flex_bison/custom_build_rules
 win_flex_bison/data/
