Windows 95/98/Me: If UNICOWS.DLL is missing (required for building a standalone filter), it will be automatically installed for you
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@314 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/win_res.rc
+++ b/win_res.rc
@@ -25,6 +25,7 @@
 #include "ui_win.rc"
 #include "manifest.rc"
 #include "version_win.rc"
+#include "make_win.rc"
 
 // "1032 TPLT" and "1064 TPLT" will be added by the 3264_mixer tool
 
